--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -21,5 +21,10 @@ pipeline {
                 sh './jenkins/scripts/kill.sh'
             }
         }
+        stage("Complete"){
+            steps {
+                echo 'Job Complete!'
+            }
+        }
     }
 }
